src/objects/Case_Record__c.object
<CustomObject>
    <fields>
        <fullName>Able_to_Address_Behav_Concerns__c</fullName>
        <inlineHelpText>Have you been able to address these issues with your child?</inlineHelpText>
        <label>Able to Address Behav. Concerns with Chi</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abuse_Witnessed_by_Child__c</fullName>
        <inlineHelpText>What abuse has your child witnessed between you and the abuser/other family members/pets?</inlineHelpText>
        <label>Abuse Witnessed by Child</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Abuse_history_narrative__c</fullName>
        <description>How often has the participant been physically abused since intake? Any other information on participant&apos;s abuse history that should be noted?</description>
        <inlineHelpText>How often has the participant been physically abused since intake? Any other information on participant&apos;s abuse history that should be noted?</inlineHelpText>
        <label>Abuse history narrative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Abuser_Knows_School_Childc_Loc__c</fullName>
        <inlineHelpText>Does the abuser know where your child attends school/childcare?</inlineHelpText>
        <label>Abuser Knows School/Childcare Location?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Abuser_Living_in_the_same_House__c</fullName>
        <description>Is the Abuser Living in the same Household as Participant AT INTAKE?</description>
        <inlineHelpText>Is the Abuser Living in the same Household as Participant AT INTAKE?</inlineHelpText>
        <label>Abuser Living  in home AT INTAKE?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Abuser_Served_in_ANY_Military__c</fullName>
        <label>Abuser Served in ANY Military</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Abuser_arrested_for_domestic_violence__c</fullName>
        <description>Has the Abuser ever been arrested for a Domestic Violence Incident?</description>
        <inlineHelpText>Has the Abuser ever been arrested for a Domestic Violence Incident?</inlineHelpText>
        <label>Abuser arrested for domestic violence?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Abuser_has_Access_to_Weapons__c</fullName>
        <label>Abuser has Access to Weapons</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Abuser_in_home_AT_MOST_RECENT_INCIDENT__c</fullName>
        <label>Abuser Living  in home RECENT INCIDENT?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Abuser_s_Age__c</fullName>
        <inlineHelpText>Enter the abuser&apos;s age in numbers. i.e. 24, not twenty four.</inlineHelpText>
        <label>Abuser&apos;s Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Abuser_s_Area_of_Residence__c</fullName>
        <formula>Screening__r.Abuser_s_Area_of_Residence__c</formula>
        <label>Abuser&apos;s Area of Residence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abuser_s_Area_of_Work__c</fullName>
        <formula>Screening__r.Abuser_s_Area_of_Work__c</formula>
        <label>Abuser&apos;s Area of Work</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abuser_s_Clothing_Style__c</fullName>
        <inlineHelpText>Enter clothing style description. (i.e. Typically wears jeans and black t-shirt)</inlineHelpText>
        <label>Abuser&apos;s Clothing Style</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Abuser_s_Eye_Color__c</fullName>
        <inlineHelpText>Enter the eye color. i.e. &quot;Blue&quot;, &quot;Green&quot;, &quot;Brown&quot;, &quot;Grey&quot;</inlineHelpText>
        <label>Abuser&apos;s Eye Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abuser_s_Facial_Hair__c</fullName>
        <label>Abuser&apos;s Facial Hair</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abuser_s_Hair_Color_Style__c</fullName>
        <inlineHelpText>Enter a description of the abuser&apos;s hair. (i.e. Dirty blonde, shoulder length and mostly in pony tail)</inlineHelpText>
        <label>Abuser&apos;s Hair Color / Style</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Abuser_s_Height_and_Weight__c</fullName>
        <inlineHelpText>Enter the height and weight. i.e. 6&apos;3&quot; / 200 lbs.</inlineHelpText>
        <label>Abuser&apos;s Height and Weight</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abuser_s_Name__c</fullName>
        <label>Abuser&apos;s Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abuser_s_Race__c</fullName>
        <description>Race of the abuser.</description>
        <label>Abuser&apos;s Race</label>
        <picklist>
            <picklistValues>
                <fullName>African-American/Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Indian/Alaska Native/Indigenous to Americas (Other than US)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian-American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic/Latino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indigenous African/Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle Eastern/Arab/Iranian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Racial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White/Caucasian</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Abuser_s_Scars_Tattoos_Markings__c</fullName>
        <inlineHelpText>Enter description of distinguishing features such as scars, tattoos. (i.e. Black bird tattoo on left shoulder.  Scar on right side of neck.)</inlineHelpText>
        <label>Abuser&apos;s Scars/Tattoos/Markings</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Abuser_s_Vehicle_Color__c</fullName>
        <label>Abuser&apos;s Vehicle Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abuser_s_Vehicle_License_Number__c</fullName>
        <label>Abuser&apos;s Vehicle License Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abuser_s_Vehicle_Year_Make_Model__c</fullName>
        <inlineHelpText>Enter abuser&apos;s vehicle info. (i.e. 1999 Toyota Tercel)</inlineHelpText>
        <label>Abuser&apos;s Vehicle Year/Make/Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advocate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Advocate assigned to this case.</description>
        <inlineHelpText>Advocate assigned to this case.</inlineHelpText>
        <label>Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Case Records</relationshipLabel>
        <relationshipName>Case_Records1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>Contact__r.Age__c</formula>
        <inlineHelpText>Pulling info from related Contact Record</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Any_Injuries__c</fullName>
        <label>Any Injuries?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Anything_Like_to_Change_About_Parenting__c</fullName>
        <inlineHelpText>If anything, what would you like to change about your parenting?</inlineHelpText>
        <label>Anything Like to Change About Parenting?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Arrival_Status_Flag__c</fullName>
        <description>Arrival Status flag based on the checklist. DO NOT USE ON LAYOUT.</description>
        <label>Arrival Status Flag</label>
        <summarizedField>Checklist__c.Arrival_Status_Flag__c</summarizedField>
        <summaryForeignKey>Checklist__c.Case_Record__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Arrival_Status__c</fullName>
        <description>Looks at the field &quot;Arrival Status Flag&quot; and returns a colored flag based on the numerical value. 0=Red, 1=Yellow, 2=Green.</description>
        <formula>CASE (Arrival_Status_Flag__c, 0, IMAGE(&quot;/servlet/servlet.FileDownload?file=015e0000000GmsY&quot;,&quot;Red&quot;), 
1,IMAGE(&quot;/servlet/servlet.FileDownload?file=015e0000000Gmsa&quot;,&quot;Yellow&quot;),
IMAGE(&quot;/servlet/servlet.FileDownload?file=015e0000000GmsQ&quot;,&quot;Green&quot;))</formula>
        <label>Arrival Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Availability_of_shelter_staff__c</fullName>
        <description>How does the participant rate the availability of shelter staff?</description>
        <inlineHelpText>How does the participant rate the availability of shelter staff?</inlineHelpText>
        <label>Availability of shelter staff</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Behavioral_Concerns_Noticed_with_Child__c</fullName>
        <inlineHelpText>Have you noticed any behavioral problems with your child? (i.e. Self harm,Hitting, biting, kicking, bedwetting, low self-image, strong fears, withdrawal, nightmares)</inlineHelpText>
        <label>Behavioral Concerns Noticed with Child</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <formula>Contact__r.Birthdate</formula>
        <inlineHelpText>Participant Birthdate. Value from their Contact record.</inlineHelpText>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brief_Description_of_Recent_Events__c</fullName>
        <inlineHelpText>Can you please give me a brief description of the events that brought you and your family here?</inlineHelpText>
        <label>Brief Description of Recent Events</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CHILDREN_S_Emergency_Contact_Information__c</fullName>
        <label>CHILDREN&apos;S Emergency Contact Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CPS_Circumstances_Dates_Outcomes_Etc__c</fullName>
        <inlineHelpText>If involvement with CPS, get information (Dates, circumstances, outcomes, case worker names, any other pertinent info)</inlineHelpText>
        <label>CPS Circumstances, Dates, Outcomes, Etc</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CPS_Involved__c</fullName>
        <label>CPS Involved?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Record_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Record_Narrative__c</fullName>
        <description>Advocate enters information and progress notes that pertain to the participant case record as a whole.</description>
        <inlineHelpText>Advocate enters information and progress notes that pertain to the participant case record as a whole.</inlineHelpText>
        <label>Case Record Narrative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_in_Child_s_Appetite__c</fullName>
        <inlineHelpText>Have you noticed a change in your child&apos;s appetite?</inlineHelpText>
        <label>Change in Child&apos;s Appetite?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Changes_in_Familysince_FHC_Waitlist__c</fullName>
        <inlineHelpText>Enter any changes to family configuration since the participant got on the waitlist.</inlineHelpText>
        <label>Changes in Familysince FHC Waitlist</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Chemical_Dependency_Service_Hours__c</fullName>
        <label>Chemical Dependency Service Hours</label>
        <summarizedField>ServiceParticipation__c.Hours__c</summarizedField>
        <summaryFilterItems>
            <field>ServiceParticipation__c.Type__c</field>
            <operation>equals</operation>
            <value>Chemical Dependency Group</value>
        </summaryFilterItems>
        <summaryForeignKey>ServiceParticipation__c.Case_Record__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Chemical_Dependency_Services__c</fullName>
        <inlineHelpText>Number of Chemical Dependency service participations.</inlineHelpText>
        <label>Chemical Dependency Services</label>
        <summaryFilterItems>
            <field>ServiceParticipation__c.Type__c</field>
            <operation>equals</operation>
            <value>Chemical Dependency Group</value>
        </summaryFilterItems>
        <summaryForeignKey>ServiceParticipation__c.Case_Record__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Child_Attending_School_Childcare__c</fullName>
        <inlineHelpText>Is your child currently attending school/childcare?</inlineHelpText>
        <label>Child Attending School/Childcare?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_Exposed_to_HadChicken_Pox__c</fullName>
        <label>Child Exposed to / HadChicken Pox?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_Exposed_to_Had_Lice__c</fullName>
        <label>Child Exposed to/ Had Lice?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_Exposed_to_Had_Scabies__c</fullName>
        <label>Child Exposed to/ Had Scabies?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_Exposed_to_Pink_Eye__c</fullName>
        <label>Child Exposed to/Had Pink Eye?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_Has_Allergies__c</fullName>
        <inlineHelpText>Does your child have any allergies?</inlineHelpText>
        <label>Child Has Allergies?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unkown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_Immunizations_Up_to_Date__c</fullName>
        <inlineHelpText>Is your child up to date on his/her immunizations?</inlineHelpText>
        <label>Child Immunizations Up to Date?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_Living_w_Part_at_Time_of_Abuse__c</fullName>
        <inlineHelpText>Was the child living with the Participant at the time of abuse?</inlineHelpText>
        <label>Child Living w/ Part. at Time of Abuse?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_in_a_Romantic_Relationship__c</fullName>
        <inlineHelpText>Is your child in a romantic relationship with someone?</inlineHelpText>
        <label>Child in a Romantic Relationship?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_s_Allergy_Description_Reactions__c</fullName>
        <inlineHelpText>If yes, please explain to what and what the reaction was.</inlineHelpText>
        <label>Child&apos;s Allergy Description &amp; Reactions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Child_s_Clothing_Needs__c</fullName>
        <inlineHelpText>What specific clothing items will your child need?</inlineHelpText>
        <label>Child&apos;s Clothing Needs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Child_s_Clothing_Sizes__c</fullName>
        <label>Child&apos;s Clothing Sizes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_s_Coping_Regarding_Incident__c</fullName>
        <inlineHelpText>Regarding incident that brought you here, how do you think your child is coping?</inlineHelpText>
        <label>Child&apos;s Coping Regarding Incident</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Child_s_Feelings_About_Being_at_NB__c</fullName>
        <inlineHelpText>How do you think your child feels about being here at New Beginnings?</inlineHelpText>
        <label>Child&apos;s Feelings About Being at NB</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Child_s_Last_Medical_Attention__c</fullName>
        <inlineHelpText>When was the last time your child received medical attention?  To determine if the child needs a medical doctor or nurse.</inlineHelpText>
        <label>Child&apos;s Last Medical Attention</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Child_s_Med_Treatment_for_Abuse__c</fullName>
        <inlineHelpText>Has your child received medical attention because of the abuse?</inlineHelpText>
        <label>Child&apos;s Med Treatment for Abuse</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Child_s_Other_Item_Needs__c</fullName>
        <inlineHelpText>What specific items will your child need to make their stay here more comfortable? (Food, clothing, interests, books, school supplies, etc.</inlineHelpText>
        <label>Child&apos;s Other Item Needs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Child_s_School_Childc_Phone_Number__c</fullName>
        <label>Child&apos;s School/Childcare Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Child_s_School_Childcare_Name__c</fullName>
        <label>Child&apos;s School/Childcare Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_s_Student_ID__c</fullName>
        <label>Child&apos;s Student ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Children_Not_Currently_with_Participant__c</fullName>
        <inlineHelpText>List the children who are not currently with the Participant.</inlineHelpText>
        <label>Children Not Currently with Participant</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Children_Service_Hours__c</fullName>
        <label>Children Service Hours</label>
        <summarizedField>ServiceParticipation__c.Hours__c</summarizedField>
        <summaryFilterItems>
            <field>ServiceParticipation__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Children</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ServiceParticipation__c.Child__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>ServiceParticipation__c.Case_Record__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Children_Service_Needs__c</fullName>
        <label>Children Service Needs</label>
        <picklist>
            <picklistValues>
                <fullName>Counseling Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug/Alcohol Counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food/Clothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Services Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therapeutic Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tutoring/Educational Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Children_Service_Participations__c</fullName>
        <description>Number of Children Service Participations.</description>
        <inlineHelpText>Number of Children Service Participations.</inlineHelpText>
        <label>Children Service Participations</label>
        <summaryFilterItems>
            <field>ServiceParticipation__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Children</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ServiceParticipation__c.Child__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>ServiceParticipation__c.Case_Record__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Computer_Hacking_Knowledge_of_Competency__c</fullName>
        <inlineHelpText>Enter a description of the abuser&apos;s hacking knowledge.</inlineHelpText>
        <label>Computer Hacking Knowledge of/Competency</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Concern_Child_Getting_Along_NB_Children__c</fullName>
        <inlineHelpText>Do you have any concerns about your child getting along with other children in the shelter?</inlineHelpText>
        <label>Concern Child Getting Along NB Children</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Concerns_Child_and_School__c</fullName>
        <inlineHelpText>Do you or your child have any concerns around schoo/childcarel? (LAP, IEP, Enrolled as Confidential Student, etc.)</inlineHelpText>
        <label>Concerns of Child &amp; School/Childcare?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Record_Type__c</fullName>
        <description>Used by the trigger, not be displayed on the layout.</description>
        <formula>Contact__r.RecordType.DeveloperName</formula>
        <inlineHelpText>Used by the trigger, not be displayed on the layout.</inlineHelpText>
        <label>Contact Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Safety_Notes__c</fullName>
        <label>Contact Safety Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Case Records</relationshipLabel>
        <relationshipName>Case_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contract_for_safety_self_harm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the participant willing to develop a plan to prevent self-harm while in shelter? Safety plan will be developed with participant while in shelter. Please include safety plan in advocacy notes.</description>
        <inlineHelpText>Is the participant willing to develop a plan to prevent self-harm while in shelter? Safety plan will be developed with participant while in shelter. Please include safety plan in advocacy notes.</inlineHelpText>
        <label>Contract for safety (self-harm)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Counseling_Other_Treatment_for_Abuse__c</fullName>
        <inlineHelpText>Has your child been involved with counseling or a family violence program because of the abuse?</inlineHelpText>
        <label>Counseling /Other Treatment for Abuse</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cultural_or_religious_information__c</fullName>
        <inlineHelpText>Is there any cultural or religious information that you would like us to be aware of?  If so, are there accommodations that would make you more comfortable?</inlineHelpText>
        <label>Cultural/Religious/Community Identity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Employment_Status__c</fullName>
        <label>Current Employment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Employed Full Time (includes Self-Employed)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed Part-Time (includes Self-Employed)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Employed, but Seeking Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Employed, not Seeking Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currently Attending School or Employment/Vocational Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>